# SimpleCmakeTutorial

./: CMakeLists.txt  Project4.ipynb  README.md  bash.sh
lib/: CMakeLists.txt
lib/include/: HelloClass.h
lib/src/: HelloClass.cpp
src/: main.cpp
